			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01av: *********************************

IMP: (12/13/04, DN) Revision of JELIB format. JELIB writer will change
format when the Electric version becomes "8.01aw". JELIB reader will
read files after "8.01aw" in a new format.

BUG: (12/10/04, GVG) No reporting min errors for negative notches (Bug #85)
FIX: Put code back (decomissioned long time ago) and amended.

IMP: (12/10/04, GVG) ERC profiling results: (1) getShapeArc() touched, (2) getShapeNode touched

IMP: (12/9/04, GVG) New thick transistors in MoCMOS technology.

IMP: (12/9/04, GVG) Transistor names in TSMC90 consistent (Bug #83)

BUG: (12/10/04, SMR) Not all parent cells are listed when "Up Hierarchy" is done (Bug #88).
FIX: In EditWindow.upHierarchy() use HashSet, not TreeSet.

IMP: (12/10/04, SMR) Added drag-and-drop from both the Explorer Tree (for cell instances)
     and from the palette (for technology primitives).

BUG: (12/10/04, SMR) Selecting a bus pin does not grab all nets on that pin (Bug #77).
FIX: In Highlighter.getHighlightedNetworks(), look at all arcs connected to a pin.

BUG: (12/10/04, SMR) Locking cells may crash when changes are made (Bug #84).
FIX: Moved all calls to CircuitChanges.cantEdit to be inside of jobs.

BUG: (12/9/04, SMR) Waveform window does not always show the full hierarchy of signal names (Bug #82).
FIX: In WaveformWindow.getSignalsForExplorer(), ensure that all levels of the signal name hierarchy are created.

BUG: (12/9/04, SMR) Spice netlister may mix-up ground signal names (Bug #81).
FIX: Change Spice.getGroundName to return null.

IMP/MAN: (12/9/04, SMR) "Layer Visibility" dialog also lets you "highlight" layers.

BUG: (12/9/04, SMR) Resizing a window doesn't always redraw its contents.
FIX: In EditWindow.java, queue resizing, just like panning and zooming.
